2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* data/ui/epiphany-ui.xml:
	* src/ephy-window.c: (update_popup_actions_visibility),
	(show_embed_popup):

	Simplify context menu code by removing the extra
	EphyDocument*FramePopup variants, and just setting the OpenFrame
	action's visibility accordingly; and fix its accelerator.
	Fixes bug #320520.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:
	* embed/mozilla/EphyAboutModule.h:

	Add titles with title capitalisation, and chanage the icon
	on the netOffline error page.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* lib/egg/egg-editable-toolbar.c: (create_item_from_action),
	(item_added_cb):

	Return early when the action doesn't exist; don't crash.
	Patch by Peter Harvey.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* data/ui/epiphany-fs-toolbar.xml:

	Remove spinner from fullscreen toolbars file.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (settings_change_notify),
	(settings_changed_cb), (ephy_window_key_press_event),
	(ephy_window_constructor):

	Use a single connection to the settings object, and
	also store the menubar accel instead of parsing it on
	each keypress.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:

	Revert change from H18 patch which shouldn't have been committed.

2005-11-01  Philip Langdale  <philipl@mail.utexas.edu>

	* src/ephy-window.c: (ephy_window_key_press_event),
	(gtk_key_theme_changed_cb), (ephy_window_constructor),
	(ephy_window_class_init): I accidentally committed my
	half-complete port of the Galeon key-press event handler
	that allows emacs keybindings to work when I made my last
	commit. Whoops.

	This change addresses post-facto comments made by chpe :-)

	Nothing terribly profound; just attaching the GktSettings
	listener on a per-window, rather than global, basis and
	detecting the other keycodes for Enter/Return.
