@@ -1,5 +1,15 @@
 2005-11-02  Christian Persch  <chpe@cvs.gnome.org>
 
+	* lib/widgets/ephy-location-entry.c: (favicon_create_drag_pixmap),
+	(favicon_button_press_event_cb), (favicon_button_release_event_cb),
+	(favicon_motion_notify_event_cb),
+	(ephy_location_entry_construct_contents):
+
+	Show drag icon with page title + URL when dragging from the drag
+	handle.
+
+2005-11-02  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/ui/epiphany-ui.xml:
 	* src/ephy-window.c: (update_popup_actions_visibility),
 	(show_embed_popup):
